css/components.css
/**
layout defaults
**/
*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  background-color: rgba(0,0,0,.03);
  font-family: var(--font-sans-serif);
  font-size: 18px;
  line-height: 21.25px;
  font-weight: 450;
}

html {
  --font-sans-serif: 'Figtree', sans-serif;
  --black: #000;
  --medium-grey: #b2b2b2;
  --light-grey: #d9d9d9;
  --lighter-grey: #f4f4f4;
  --lightest-grey: #fafafa;
  --brown: #8f8b75;
}

img {
  display: block;
}

/**
components page layout
**/

.wrapper {
  display: grid;
  gap: 0px;
  grid-template-columns: 320px minmax(0, 1fr);
  padding: 0;
  margin: 0;
  grid-template-areas:
    "sidebar content";
}

.sidebar {
  grid-area: sidebar;
  background-color: #f5f5f5;
  padding: 15px 0 0 30px;
  margin: 0;
  border: 0;
}

.sidebar-nav {
  position: fixed;
  overflow-y: auto;
}

.sidebar-nav-list {
  text-align: left;
  padding: 0;
  line-height: 2rem;
  list-style: none;
}

.sidebar-link {
  text-decoration: none;
}

.space {
  color: var(--lighter-grey);
}

.content {
  grid-area: content;
  flex: 1 0 auto;
  margin: 0;
  padding: 20px;
  background-color: white;
}

.component__image {
  width: 80%;
  border: .5px solid var(--light-grey);
  background-color: #f5f5f5;
  padding: 15px;
  margin: 10px 0;
}

.component__code {
  width: 80%;
  border: .5px solid var(--light-grey);
  padding: 15px;
  margin: 10px 0;
}

/**
typography
**/

h1 {
  font-size: 50px !important;
  line-height: 50px;
  font-weight: 450;
  margin: 0;
  padding: 12px 0 0 0;
  border-top: 1px solid var(--black);
}

h2 {
  font-size: 50px;
  line-height: 50px;
  font-weight: 450;
  color: var(--medium-grey);
  margin: 0;
}

h3 {
  font-size: 23px;
  line-height: 26px;
  font-weight: 450;
  padding: 0 0 26px 0;
}

h4 {
  font-size: 20px;
  line-height: 21px;
  font-weight: 450;
  margin-top: 8px;
}

h5 {
  font-size: 20px;
  line-height: 21px;
  font-weight: 450;
  color: var(--medium-grey);
  margin-top: -25px;
  padding: 0;
}

a {
  color: black;
  text-underline-offset: 3px;
}

/**
header
**/

.header-container {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
}

.header-main-nav {
  max-width: 1284px;
  background-color: white;
  height: 56px;
  margin: auto;
  display: flex; 
  align-items: center;
  justify-content: space-between;
  padding: 0;
  box-shadow: 0px 2px 10px rgb(0 0 0 / 5%);;
}

.logo-square {
  height: 56px;
  border: 0;
}

.language {
  height: 54px;
  display: flex;
  align-items: center;
}

.header-main-nav__list {
  font-size: 16px;
  list-style: none;
  height: 56px;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
}

a.nav {
  max-width: 1284px;
  text-decoration: none;
  height: 56px;
  display: flex;
  font-size: 16px;
  width:fit-content;
  padding: 18px 17px 15px 17px;
  margin: 0;
  border-left: 1px solid var(--lighter-grey);
  border-right: 1px solid var(--lighter-grey);
}

a.nav:hover {
  background: var(--black);
  color: var(--medium-grey);
  height: 54px;
}

a.nav-current {
  text-decoration: none;
  padding: 18px 17px 15px 17px;
  border-bottom: 4px solid black;
}

a.nav-current:hover {
  text-decoration: none;
  padding: 18px 17px 15px 17px;
  background: var(--black);
  color: var(--medium-grey);
  height: 54px;
}

/**
gallery
**/

.home-page {
  background-color: white;
  max-width: 1284px;
  padding: 0 0 20px 0;
  margin: auto;
}

.gallery-collection {
  padding: 0;
}

.gallery {
  background-color: white;
  padding: 150px 40px;
  margin: auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
  max-width: 1284px;
  column-gap: 20px;
  row-gap: 35px;
  justify-content: center;
}

.gallery-block {
  margin: 20px 0 0 0;
  width: fit-content;
  border-top: 1.25px solid black;
  display: grid;
}

.gallery-block__image {
  margin: -9px 0 0 0;
  display: grid;
}

.general-hardware {
  margin: -30px 0 0 0;
}

.gallery-text {
  font-size: 28px;
  line-height: 31px;
  display: grid;
  grid-column: 1 / span 2;
}

.gallery-link {
 text-decoration: none;
}

.gallery-link:hover {
  background-color: var(--lightest-grey);
}

.gallery-link:active {
  background-color: var(--lightest-grey);
}

/**
project page
**/

.projects-page {
  background-color: white;
  max-width: 1284px;
  padding: 0 0 20px 0;
  margin: auto;
}

.project-page-content {
  background-color: white;
  max-width: 1284px;
  padding: 0 40px 0 40px;
  margin: auto;
  margin-top: 0;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr 1fr;
}

.hero {
  background-color: white;
  padding: 56px 0 0 0;
  max-width: 1284px;
  margin: auto;
}

.hero__prev-next-text {
  font-size: 14px;
  color: var(--medium-grey);
  margin-left: 40px;
  padding: 0 0 2px 0;
}

.previous-next {
  text-decoration: none;
  color: var(--medium-grey);
}

.previous-next:hover {
  text-decoration: none;
  color: var(--black);
}

.head-subhead {
  grid-column: 1 / span 2;
  margin-bottom: 100px;
}

.half-page-column {
  grid-column: 1;
  grid-row: 2;
  border-top: 1px solid var(--black);
}

.future-carousel {
  border-top: 1px solid var(--black);
  padding: 18px 0 0 0;
}

.carousel__caption-text {
  font-size: 11px;
  color: var(--medium-grey)
}

.project-text-block {
  grid-column: 1 /span 2;
  grid-row: 3;
  margin-bottom: 115px;

}
.future-accordion-container {
  padding: 30px 0 0 0;
  border-bottom: 1px solid var(--black);
}

.future-accordion-row {
  border-top: 1px solid var(--black);
  display: grid;
  grid-template-columns: 200px auto 20px;
}

.future-accordion-text {
  padding: 0;
  margin: 11px 0 11px 0;
}

.future-accordion-row__link {
  text-decoration: none;
}

.future-accordion-row__link:hover {
  color: var(--medium-grey);
}

.future-accordion-row__link:active {
  color: var(--medium-grey);
}

/**
footer
**/

.footer-text__black {
  font-size: 11px;
  line-height: 15px;
  padding: 2px 0 0 0;
}

.footer-text__medium-gray {
  font-size: 11px;
  line-height: 15px;
  color: var(--medium-grey);
  list-style: none;
  padding: 0;
  margin: 0;
}

.footer-link {
  text-decoration: none;
  color: var(--medium-grey);
 }

.footer-link:hover {
text-decoration: none;
color: var(--black);
}

.footer-link:active {
  text-decoration: none;
  color: var(--black);
  }

footer {
  max-width: 1284px;
  margin: auto;
}

.footer-container {
  background-color: white;
  padding: 0px 40px;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(2, 65% 33%);
  }
  
.footer-brand {
  max-width: 1284px;
  margin: 0;
  grid-column: 1/span 2;
  grid-row: 1;
  height: 72px;
  display: flex;
  justify-content: flex-start;
  border-top: 1px solid var(--black);
}

.footer-brand__logo-image {
  grid-column: 1;
  grid-row: 1;
  padding: 12px 100px 0px 0;
  height: 44px;
}

.footer-brand__logo-name {
  font-size: 14px;
  line-height: 17px;
  grid-column: 1;
  grid-row: 1;
  padding: 10px 0;
  margin: 0;
}

.footer__gallery-list {
  grid-column: 1;
  grid-row: 2 / span 2;
  padding: 11px 0 0 0;
  border-top: 1px solid var(--medium-grey);
  column-count: 4;
  column-gap: 12px;
}

.footer-subscribe {
  grid-column: 2;
  grid-row: 2;
  border-top: 1px solid var(--medium-grey);
}

.text-input-box {
  background-color: var(--lightest-grey);
  border: 1px solid var(--light-grey);
  padding: 8px 100px 8px 8px;
  margin-bottom: 30px;
  font-size: 11px;
  line-height: 15px;
}

.submit-button {
  background-color: var(--black);
  color: white;
  font-weight: bold;
  border: 1px solid var(--black);
  padding: 8px 8px 8px 8px;
  margin-bottom: 30px;
  font-size: 11px;
  line-height: 15px;
}

.social-support {
  grid-column: 2;
  grid-row: 3;
  display:flex;
}

.footer-social {
  grid-column: 2;
  grid-row: 3;
  width: 50%;
  border-top: 1px solid var(--medium-grey);
}

.social-icon-circle {
  padding: 0 6px 0 0;
}

.social-list {
  list-style: none;
  display:flex;
  justify-content:flex-start;
  padding: 0;
}

.social-link:hover {
  opacity: .5;
}

.footer-support  {
  grid-column: 2;
  grid-row: 3;
  width: 50%;
  border-top: 1px solid var(--medium-grey);
}

.footer-support-text {
  margin-left: 20px;
}

.footer-support-logo {
  margin-left: 20px;
}

.footer-copyright-credit {
  grid-column: 1;
  grid-row: 4;
  display: flex;
  justify-content: flex-start;
}

.footer-text__copyright {
  font-size: 11px;
  color: var(--light-grey);
  padding: 0 100px 0 0;
}

.footer-text__copyright-link {
  text-decoration: none;
  color: var(--light-grey);
}

.footer-text__copyright-link:active {
  text-decoration: none;
  color: var(--black);
}

.footer-text__copyright-link:hover {
  text-decoration: none;
  color: var(--black);
}

@media screen and (max-width: 950px) {
  .nav-text {
    display: none;
  }
}

@media screen and (max-width: 880px) {
  .project-page-content {
    display: flex;
    flex-direction: column;
    padding: 0px 10px;
    width: 100%;
  }
}
  
@media screen and (max-width: 640px) {
  .gallery {
    padding: 0px 10px;
  }
  .footer-container  {
    display: flex;
    flex-direction: column;
    padding: 0px 10px;
    width: 100%;
  }
  .footer__gallery-list {
    column-count: 2;
  }
  .gallery {
    padding: 150px 20px;
  }
  h1 {
    font-size: 25px !important;
    line-height: 25px;
  }
  
  h2 {
    font-size: 25px;
    line-height: 25px;
  }

  .hero__prev-next-text {
    margin-left: 10px;
  }
}

